--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/datetimepicker": "^5.1.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
@@ -29,6 +30,7 @@
     "expo-status-bar": "~1.2.0",
     "expo-web-browser": "~10.1.0",
     "jotai": "^1.5.0",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^7.22.5",
@@ -42,8 +44,7 @@
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
-    "react-query": "^3.34.7",
-    "@react-native-async-storage/async-storage": "~1.15.0"
+    "react-query": "^3.34.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
