--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@types/axios": "^0.14.0",
+    "@types/react-native-vector-icons": "^6.4.10",
+    "@types/styled-components": "^5.1.19",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
     "expo-constants": "~13.0.0",
@@ -35,6 +37,7 @@
     "react-dom": "17.0.1",
     "react-hook-form": "^7.22.5",
     "react-native": "0.64.3",
+    "react-native-animated-nav-tab-bar": "^3.1.7",
     "react-native-chart-kit": "^6.11.0",
     "react-native-flash-message": "^0.2.0",
     "react-native-modal": "^13.0.0",
@@ -44,12 +47,14 @@
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
-    "react-query": "^3.34.7"
+    "react-query": "^3.34.7",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/styled-components-react-native": "^5.1.3",
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
     "react-test-renderer": "17.0.1",
