added new quote feature

--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "react-native-chart-kit": "^6.11.0",
     "react-native-flash-message": "^0.2.0",
     "react-native-modal": "^13.0.0",
+    "react-native-modalbox": "^2.0.2",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-shadow-2": "^6.0.0-beta.0",
