--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-animated-nav-tab-bar": "^3.1.7",
     "react-native-chart-kit": "^6.11.0",
     "react-native-flash-message": "^0.2.0",
+    "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-modal": "^13.0.0",
     "react-native-modalbox": "^2.0.2",
     "react-native-responsive-fontsize": "^0.5.1",
@@ -58,6 +59,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/react-native-loading-spinner-overlay": "^0.5.3",
     "@types/styled-components-react-native": "^5.1.3",
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
