--- a/app.json
+++ b/app.json
@@ -1,34 +1,36 @@
 {
   "expo": {
-    "name": "book-app-rn",
-    "slug": "book-app-rn",
+    "name": "Motiliest",
+    "slug": "motiliest-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/motivehisse.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
+    "notification": {
+      "icon": "./assets/images/motivehisse.png"
+    },
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/images/motivehisse.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/motivehisse.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.karamanmertcan.bookapprn"
     },
     "web": {
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/motivehisse.png"
     }
   }
 }
